// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction renders a button only 1`] = `
<div
  className="btnOnly"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h3
        className="headline"
      >
        This is the headline for the CTA.
      </h3>
      <hr
        className="dash"
        style={
          Object {
            "width": "2rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="button alternate link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a large size 1`] = `
<div
  className="large"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h3
        className="headline"
      >
        This is the headline for the CTA.
      </h3>
      <hr
        className="dash"
        style={
          Object {
            "width": "2rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="button alternate link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a medium size 1`] = `
<div
  className="medium"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h3
        className="headline"
      >
        This is the headline for the CTA.
      </h3>
      <hr
        className="dash"
        style={
          Object {
            "width": "2rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="button alternate link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;

exports[`CallToAction renders a small size 1`] = `
<div
  className="small"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h3
        className="headline"
      >
        This is the headline for the CTA.
      </h3>
      <hr
        className="dash"
        style={
          Object {
            "width": "2rem",
          }
        }
      />
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="button alternate link primary responsive spacing"
        href="http://www.example.com/"
      >
        Call To Action
      </a>
    </div>
  </div>
</div>
`;
